# UoM_EE_Year3_Final_Project_2022

./: README.md  WU_Tong_Final_Report_V1.md  commit.md
AnalogReadSerial/: AnalogReadSerial.ino
Clion/: 4040_data.csv  VCNL4040.h
Clion/APDS9960/: CMakeLists.txt  platformio.ini
Clion/Acce_Gyro/: CMakeLists.txt
Clion/BLE_Sense/: CMakeLists.txt
Clion/HallSensorMonitor/: CMakeLists.txt
Clion/Integrated Project/: CMakeLists.txt  platformio.ini
Clion/IoT_Recieve/: CMakeLists.txt
Clion/IoT_Send/: CMakeLists.txt
Clion/Kalman Filter/: CMakeLists.txt
Clion/KalmanFilter/: CMakeLists.txt
Clion/LIS3MDL/: CMakeLists.txt
Clion/LIS3MDL/src/: main.cpp
Clion/LSM6DS33/: CMakeLists.txt
Clion/MainBoard/: CMakeLists.txt  platformio.ini
Clion/MainBoardBLE/: CMakeLists.txt
Clion/Pitch_Yaw_Roll/: CMakeLists.txt
Clion/SupplementryBoard/: CMakeLists.txt
Clion/VCNL4040_Simple/: CMakeLists.txt
Final/MainBoard/: CMakeLists.txt
Final/MainBoardTest/: CMakeLists.txt
Final/SupplementaryBoardBack/: CMakeLists.txt
Final/SupplementaryBoardFrame/: CMakeLists.txt
Final/SupplementaryBoardFrame/lib/Adafruit_LSM6DS/: CMakeLists.txt
Final/SupplementaryBoardFront/: CMakeLists.txt
IntegratedProject/: HallSensor.cpp  IntegratedProject.ino  Throttle.cpp
IntegratedProjectBackup/: HallSensor.h  Throttle.h  main.cpp
Read_hall_voltage/: Read_hall_voltage.ino
Read_hall_voltage_new/: Read_hall_voltage_new.ino
Read_hall_voltage_pulseIn/: Read_hall_voltage_pulseIn.ino
Read_throttle_voltage/: Read_throttle_voltage.ino
ThrottleSecureMonitor/: ThrottleSecureMonitor.ino
(+96 files in other folders)
